Added data types

--- a/UCSAS_Python.ipynb
+++ b/UCSAS_Python.ipynb
@@ -83,7 +83,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "908ba4b1",
    "metadata": {
@@ -202,24 +201,25 @@
    "source": [
     "## Aims of the Workshop\n",
     "\n",
-    "- Python Install\n",
-    "- Python Syntax\n",
+    "- **Python Syntax**\n",
     "    + Variable\n",
     "    + Indentation\n",
     "    + Comments\n",
-    "- Data Types: Mutable and Immutable\n",
+    "    + Python Help\n",
+    "- **Data Types**: Mutable and Immutable\n",
     "    + **Text Type**: `str`\n",
     "    + **Numeric Types**: `int, float, complex`\n",
     "    + **Sequence Types**: `list, tuple, range`\n",
     "    + **Mapping Type**:\t`dict`\n",
     "    + **Set Types**: `set, frozenset`\n",
     "    + **Boolean Type**:\t`bool`\n",
-    "- Basic Modules and respective Functions\n",
+    "- **Conditions, Loops, Functions**\n",
+    "- **Basic Modules** and respective Functions\n",
     "    + **`Numpy`**: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
     "    + **`Pandas`**: DataFrames, Data Manipulation\n",
     "    + **`Scipy`**: Stats functions, optimize functions\n",
     "    + **`Matplotlib`**: Visualization\n",
-    "- Miscellaneous"
+    "- Exercises "
    ]
   },
   {
@@ -244,12 +244,13 @@
    "id": "68c6b2ba",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
     "## Jupyter Notebook\n",
     "\n",
+    "### Some Useful comments for Jupyter\n",
     "- In order to work with a jupyter notebook that allows for `markdown` and `code chunks`, it is most importanat to note the difference between `command` mode and `edit` mode. \n",
     "    + `Command` mode is activated when a `blue border` is around the highlighted chunk and often can be obtained by pressing `ESC`\n",
     "    + This implies that you can add a new chunk using `A` or `B`, change the current chunk into a markdown chunk using `M`, or a code chunk using `Y`, activate help to find all shortcuts using `H` \n",
@@ -261,6 +262,145 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c47d36f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Python Installation Check and our first Python run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c014c9ba",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.8.8\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Check Python Installation & Version (`!`)\n",
+    "!python --version\n",
+    "\n",
+    "## print Hello World\n",
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95d0e225",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Python \"f-string\" and \"input\" function\n",
+    "\n",
+    "- Python \"f-string\" allows concatenation of strings with variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "df44b076",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Surya\n",
+      "Enter your age: 29\n",
+      "My name is Surya and I am 29 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "## taking user input\n",
+    "name = input(\"Enter your name: \")\n",
+    "age  = input(\"Enter your age: \")\n",
+    "print(f\"My name is {name} and I am {age} years old\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c90e2a6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Save this a source file to run multiple times\n",
+    "\n",
+    "%save is a magic function that allows us to save a source file once we like a function run, application run etc by running it in Jupyter and using the chunk number dynamically as an input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d5c33ab6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following commands were written to file `firstscript.py`:\n",
+      "## taking user input\n",
+      "name = input(\"Enter your name: \")\n",
+      "age  = input(\"Enter your age: \")\n",
+      "print(f\"My name is {name} and I am {age} years old\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "## magic command allows you to save second run chunk in `.py`\n",
+    "## and -a allows to append to that rather than overwrite.\n",
+    "\n",
+    "## I will run this once and comment it as it is a dynamic function\n",
+    "## and I don't want to create mutliple files.\n",
+    "\n",
+    "# %save firstscript.py -n 2 -a "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efe8e82b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- `!` allows for magic use of `bash` within jupyter notebook. \n",
+    "- `%save` allows for magic save of a code chunk into a `.py` file that you can run using python in bash."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0eb99f5",
    "metadata": {
     "slideshow": {
@@ -268,89 +408,458 @@
     }
    },
    "source": [
-    "## Python Syntax & Indentation\n",
+    "## Python Syntax\n",
+    "\n",
+    "- Python uses `new line` to inform `end` of command or function.\n",
+    "- This is unlike other programs that use brackets or semi-colons.\n",
+    "- Python requires `indentation` or white space to inform to inform `scope` of loops, functions, conditions and classes. \n",
+    "\n",
+    "### Comments\n",
+    "- Comments are applied using `#` or apply shortcut `CMD + /`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "227cb60c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello UCSAS\n",
+      "Workshop is going good??\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Demo: Print, End of command, Commenting\n",
+    "print(\"Hello UCSAS\")\n",
+    "print(\"Workshop is going good??\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78871b3a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Python Syntax\n",
+    "\n",
+    "### Variable Assignment\n",
+    "- We use \"=\" for assignment of a value to a variable name.\n",
+    "- We can assign integers, floats, strings, boolean or lists to a variable.\n",
+    "- \"is\" verifies if it is the same object in the same address while \"==\" verifies the equality pointwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d0c1693b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "UCSAS\n",
+      "True\n",
+      "[1, 2, 3, 4]\n",
+      "2 , UCSAS , True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Integer Assignment to a variable\n",
+    "x = 2\n",
+    "\n",
+    "# String\n",
+    "z = \"UCSAS\"\n",
+    "\n",
+    "## Boolean\n",
+    "w = True\n",
+    "\n",
+    "## list\n",
+    "a = [1, 2, 3, 4]\n",
+    "\n",
+    "## Mutliple Assignment at once\n",
+    "a1,  a2, a3 = 2, \"UCSAS\", True\n",
+    "\n",
+    "print(x)\n",
+    "print(z)\n",
+    "print(w)\n",
+    "print(a)\n",
+    "\n",
+    "print(a1, ',', a2, ',', a3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced31aae",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Indentation\n",
+    "- Indentation refers to the spaces at the beginning of a code line.\n",
+    "    + You have to use some white space and it depends on programmer but should be `at least one space`.\n",
+    "    + Use `same number` of space in same block of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cb25ea4d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Less than 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indentation using one space to continue `if`\n",
+    "# Also see the use of `:`\n",
+    "x = 0\n",
+    "\n",
+    "if x>2: \n",
+    " print(\"Greater than 2\")\n",
+    "else: \n",
+    " print(\"Less than 2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "347f3a42",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Mutability and Immutability\n",
+    "\n",
+    "- Few data types are mutable and few are immutable.\n",
+    "- Few methods can be applied at the same address while modifying the original whereas few methods cannot be.\n",
+    "- `is` allows to check if both are at the same address and not just the same value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "40d46486",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n",
+      "Abcd\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Immutable Data type - Example: String, tuple, pd.index\n",
+    "x = 'abcd'\n",
+    "y = x.capitalize()\n",
+    "\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(y[0])\n",
+    "\n",
+    "## Assignment such as `x[0] = b` gives error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "239ac951",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, [1, 2]]\n",
+      "[1, 2, [1, 2]]\n",
+      "[1, 2, [1, 2]]\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "[2, 2, [1, 2], 4]\n",
+      "[2, 2, [1, 2], 4]\n",
+      "[1, 2, [1, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Mutable Data type  - Example: List\n",
+    "x = [1, 2, [1,2]]\n",
+    "y = x\n",
+    "z = x[:]\n",
+    "\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)\n",
+    "\n",
+    "## is vs. == \n",
+    "print(x is y)\n",
+    "print(x is z)\n",
+    "print(x == z)\n",
+    "\n",
+    "## append is a method of class list\n",
+    "a = x.append(4)\n",
+    "x[0] = 2\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdd1d717",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Help in Python\n",
+    "\n",
+    "- In python help can be required of three types.\n",
+    "    + you don't know what function to use: google, tutorials can be helpful\n",
+    "    + you know a function but don't know its usage: use `help`(function)\n",
+    "    + you know module but forgot the name of the function: use `tab` after module name and a dot\n",
+    "    + you want to use methods for your data type but don't know them: use `dir(type)`\n",
+    "- `dir()` allows you to get all the methods of an class or a type.\n",
+    "- If you wish to get only the meaningful ones that are predominantly used, the following \"`if` condition\" avoiding all those that start with `__` or `_` may be helpful.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "619410d3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
+      "Help on built-in function sum in module builtins:\n",
+      "\n",
+      "sum(iterable, /, start=0)\n",
+      "    Return the sum of a 'start' value (default: 0) plus an iterable of numbers\n",
+      "    \n",
+      "    When the iterable is empty, return the start value.\n",
+      "    This function is intended specifically for use with numeric values and may\n",
+      "    reject non-numeric types.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Using dir to find the methods for list\n",
+    "MyClass = list\n",
+    "method_list = [method for method in dir(MyClass) if method.startswith('__') is False]\n",
+    "print(method_list)\n",
+    "\n",
+    "## Help on function `sum`\n",
+    "help(sum)\n",
+    "\n",
+    "x = [1, 2, 3]\n",
+    "sum(x, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00e60354",
+   "metadata": {},
+   "source": [
+    "## Data Types, Casting\n",
+    "\n",
+    "- **Data Types**: Mutable and Immutable\n",
+    "    + **Text Type**: `str`\n",
+    "    + **Numeric Types**: `int, float, complex`\n",
+    "    + **Sequence Types**: `list, tuple, range`\n",
+    "    + **Mapping Type**:\t`dict`\n",
+    "    + **Set Types**: `set, frozenset`\n",
+    "    + **Boolean Type**:\t`bool`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "7e83d46f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "(1+0j)\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Integer to Float\n",
+    "x = 1\n",
+    "print(float(x))\n",
+    "print(complex(x))\n",
+    "\n",
+    "## Boolean to Integer\n",
+    "x = True\n",
+    "print(int(x))\n",
+    "\n",
+    "## List to Integer\n",
+    "x = [1, 2, 3]\n",
+    "a, b, c = x\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8603615a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provide a vector:1,  2\n",
+      "['1', ',', ' ', ' ', '2']\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84f9ba21",
+   "metadata": {},
+   "source": [
+    "## Quiz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a840a5cd",
+   "metadata": {},
+   "source": [
+    "## Quiz Soln."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e070fedd",
+   "metadata": {},
+   "source": [
+    "## Quiz Soln. Contd.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c014c9ba",
+   "id": "4120275f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "227cb60c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "835b74a3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Important References\n",
+    "\n",
+    "- [Practical Data Science by Prof.Eubanks](https://www.practicaldatascience.org/html/index.html)\n",
+    "- Anaconda and respective documentations\n",
+    "- [W3Schools](https://www.w3schools.com/python/default.asp)\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0c1693b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb25ea4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "619410d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d027823c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8603615a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f12bbd76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d963d2af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33b81814",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "8d2fb523",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Acknowledgements:\n",
+    "\n",
+    "- I thank the audience for their patience and enthusiasm.\n",
+    "- I thank Professor Jun Yan whose class has taught a lot\n",
+    "- Also need to acknowledge IMSI bootcamp and the humongous open source available on internet.\n",
+    "- Wish you all the best of luck with working on Python.\n",
+    "- I will be available at [surya.eada@uconn.edu](mailto:surya.eada@uconn.edu)\n",
+    "\n",
+    "## Questions?"
+   ]
   }
  ],
  "metadata": {
