added acknowledgements, and data types

--- a/UCSAS_Python.ipynb
+++ b/UCSAS_Python.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c47d36f",
+   "id": "7d5d3901",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d0e225",
+   "id": "a59dd75f",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df44b076",
+   "id": "4a6be4b6",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c90e2a6",
+   "id": "dac50304",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d5c33ab6",
+   "id": "337d49ee",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe8e82b",
+   "id": "17bf1d4f",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78871b3a",
+   "id": "97a58de7",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -457,6 +457,7 @@
     "### Variable Assignment\n",
     "- We use \"=\" for assignment of a value to a variable name.\n",
     "- We can assign integers, floats, strings, boolean or lists to a variable.\n",
+    "- Also allows multiple assignment in a single line from multiple objects or single list.\n",
     "- \"is\" verifies if it is the same object in the same address while \"==\" verifies the equality pointwise."
    ]
   },
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced31aae",
+   "id": "f92fbb21",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347f3a42",
+   "id": "65e92c04",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -569,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "40d46486",
+   "id": "e0d44505",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -601,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "239ac951",
+   "id": "b05069b1",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd1d717",
+   "id": "aefd5c52",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -719,8 +720,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e60354",
-   "metadata": {},
+   "id": "006fae95",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Data Types, Casting\n",
     "\n",
@@ -730,16 +735,39 @@
     "    + **Sequence Types**: `list, tuple, range`\n",
     "    + **Mapping Type**:\t`dict`\n",
     "    + **Set Types**: `set, frozenset`\n",
-    "    + **Boolean Type**:\t`bool`"
+    "    + **Boolean Type**:\t`bool`\n",
+    "    \n",
+    "- Use `type()` to find the data type.\n",
+    "\n",
+    "### Try:\n",
+    "- Do you know what happens if you find try `type(type(str))`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "7e83d46f",
+   "execution_count": null,
+   "id": "a747c716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Mutable Types:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b63b82d",
+   "metadata": {},
+   "source": [
+    "## Data Casting to types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b0eb9a9",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -750,7 +778,7 @@
       "1.0\n",
       "(1+0j)\n",
       "1\n",
-      "1\n"
+      "1 , 2\n"
      ]
     }
    ],
@@ -767,7 +795,7 @@
     "## List to Integer\n",
     "x = [1, 2, 3]\n",
     "a, b, c = x\n",
-    "print(a)"
+    "print(a, ',', b)"
    ]
   },
   {
@@ -793,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f9ba21",
+   "id": "9fc8fc70",
    "metadata": {},
    "source": [
     "## Quiz"
@@ -801,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a840a5cd",
+   "id": "bf39fdb3",
    "metadata": {},
    "source": [
     "## Quiz Soln."
@@ -809,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e070fedd",
+   "id": "440bb299",
    "metadata": {},
    "source": [
     "## Quiz Soln. Contd.\n",
@@ -819,14 +847,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4120275f",
+   "id": "6d25386a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "835b74a3",
+   "id": "038d8db3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -843,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d2fb523",
+   "id": "ef424bc4",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
